--- a/Frontend/src/styles/index.scss
+++ b/Frontend/src/styles/index.scss
@@ -12,7 +12,7 @@
     font-family: "Montserrat", sans-serif;
     font-size: 16px;
     color: white;
-    background-color: #1c233d;
+    background-color: #04040c;
   }
 }
 
@@ -106,37 +106,36 @@ a {
   transform: rotateY(180deg);
 }
 
-
 .loading {
-	animation: spinner 0.8s linear infinite;
+  animation: spinner 0.8s linear infinite;
 }
 
 @keyframes spinner {
-	from {
-		transform: rotate(0);;
-	}
-	to {
-		transform: rotate(360deg);
-	}
+  from {
+    transform: rotate(0);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 // Scrollbar
 /* width */
 ::-webkit-scrollbar {
-	width: 10px;
+  width: 10px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-	background: #1c233d;
+  background: #1c233d;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-	background: #30384D;
+  background: #30384d;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-	background: #6F5CF1;
+  background: #6f5cf1;
 }
